@@ -1,26 +1,14 @@
 @echo off
-title Brproject - Game
-color 0B
-
-call "%~dp0cache\brproject-java.inc.bat"
-
-REM ===== Inicializador sem dashboard elaborado By Eduardo.SilvaL2J =====
-set L2_EMAIL=brprojeto@l2jbrasil.com
-
-REM Gera uma key simples baseada no horario
-set KEY=%RANDOM%%RANDOM%%RANDOM%
-
-REM ===== JVM FLAGS: G1GC + AppCDS + reclaim periodico (similar ao ZGC) =====
-call "%~dp0cache\brproject-g1-reclaim.inc.bat"
-set JVM_FLAGS=-Xms3g -Xmx3g -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:G1HeapRegionSize=16m -XX:+UseStringDeduplication -XX:+UseCompressedOops -XX:+UseCompactObjectHeaders -XX:+TieredCompilation -XX:TieredStopAtLevel=4 %G1_RECLAIM_FLAGS% -XX:+AutoCreateSharedArchive -XX:SharedArchiveFile=cache/brproject_cds.jsa -Xlog:cds=error
-
-cd /d "%~dp0game"
-
-if not exist cache mkdir cache
-
-call "%~dp0cache\brproject-cds-check.inc.bat" "cache\brproject_cds.jsa" "%~dp0libs\server.jar" "G1"
-call "%~dp0cache\brproject-classpath.inc.bat" "%~dp0libs"
-
-"%JAVA_CMD%" -javaagent:../libs/l2voice-bridge.jar %JVM_FLAGS% -cp "%BRPROJECT_CP%" ext.mods.gameserver.GameServer %KEY% %L2_EMAIL%
-
-if not "%L2GS_GUI%"=="1" pause
+cd /d "%~dp0"
+echo Este script foi movido para Brproject_Distribution\dev-console\StartGame_SemDashboard.bat
+if exist "%~dp0StartGame_SemDashboard.vbs" (
+    wscript "%~dp0StartGame_SemDashboard.vbs"
+) else if exist "%~dp0Brproject_Distribution\dev-console\StartGame_SemDashboard.vbs" (
+    wscript "%~dp0Brproject_Distribution\dev-console\StartGame_SemDashboard.vbs"
+) else if exist "%~dp0Brproject_Distribution\dev-console\StartGame_SemDashboard.bat" (
+    cd /d "%~dp0Brproject_Distribution\dev-console"
+    call StartGame_SemDashboard.bat
+) else (
+    echo ERRO: arquivo nao encontrado: Brproject_Distribution\dev-console\StartGame_SemDashboard.bat
+    pause
+)
